# ancombc2-heatmaps

./: README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
ancombc2_heatmaps/: __init__.py  boxplot_trajectory_plotter.py  config.py  data.py  heatmap.py  plotter.py  taxonomy.py  trajectory.py  trajectory_plotter.py  workflow.py  workflows.py
notebooks/: Heatmaps_Tester.ipynb  Untitled.ipynb  boxplot_trajectory_plot.ipynb  test4.ipynb  test5.ipynb  test_6.ipynb  tumour_Ancom.ipynb
