[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ancombc2-heatmaps"
version = "2.0.0"
description = "Reusable plotting utilities for ANCOM-BC2 heatmaps and taxon trajectories"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Karl Balzer" }
]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn"
]

[tool.setuptools.packages.find]
where = ["."]